--- a/captioning.ipynb
+++ b/captioning.ipynb
@@ -6,14 +6,17 @@
    "metadata": {},
    "source": [
     "📖 **Resources**:\n",
-    " * EfficientNer B6 - https://pytorch.org/vision/stable/generated/torchvision.models.efficientnet_b6.html#torchvision.models.efficientnet_b6\n",
-    " * CocoCaptions DS - https://pytorch.org/vision/stable/generated/torchvision.datasets.CocoCaptions.html#torchvision.datasets.CocoCaptions\n",
-    " * Guide to torchvision COCO Dataset - https://medium.com/howtoai/pytorch-torchvision-coco-dataset-b7f5e8cad82\n",
+    " * COCO - https://cocodataset.org/\n",
+    " * EfficientNet B6 - https://pytorch.org/vision/stable/generated/torchvision.models.efficientnet_b6.html#torchvision.models.efficientnet_b6\n",
     " * T5 Model HF - https://huggingface.co/docs/transformers/model_doc/t5#t5#\n",
     " * T5 Small HF - https://huggingface.co/t5-small\n",
     " * Aladdin Persson's image captioning repo https://github.com/aladdinpersson/Machine-Learning-Collection/tree/master/ML/Pytorch/more_advanced/image_captioning\n",
     " * Guide to image captioning - https://towardsdatascience.com/a-guide-to-image-captioning-e9fd5517f350\n",
-    " * Andrej Karpathy's Deep Visual-Semantic Alignments for Generating Image Descriptions - https://cs.stanford.edu/people/karpathy/deepimagesent/"
+    " * Andrej Karpathy's Deep Visual-Semantic Alignments for Generating Image Descriptions - https://cs.stanford.edu/people/karpathy/deepimagesent/\n",
+    " * Andrej Karpathy's minGPT implementation https://github.com/karpathy/minGPT\n",
+    " * Aladdin Persson's transformer from scratch - https://github.com/aladdinpersson/Machine-Learning-Collection/tree/master/ML/Pytorch/more_advanced/transformer_from_scratch\n",
+    " * The role of the mask in transformer's decoder - https://ai.stackexchange.com/questions/23889/what-is-the-purpose-of-decoder-mask-triangular-mask-in-transformer\n",
+    " * Semi-Autoregressive Transformer for Image Captioning (Relaxed mask idea) - https://arxiv.org/pdf/2106.09436.pdf"
    ]
   },
   {
@@ -26,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6c396ab",
+   "id": "1f038cc4",
    "metadata": {},
    "source": [
     "## 1. Import depedencies"
@@ -41,14 +44,18 @@
    "source": [
     "import json\n",
     "import os\n",
+    "import string\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import skimage.io as io\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
+    "from skimage.transform import resize\n",
     "from torchvision import models, transforms\n",
     "from torch.utils.data import DataLoader, Dataset\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from transformers import T5Model, T5Tokenizer"
+    "from dataclasses import dataclass"
    ]
   },
   {
@@ -59,14 +66,12 @@
    "outputs": [],
    "source": [
     "# Load models\n",
-    "efficient_net = models.efficientnet_b6(pretrained=True, progress=True)\n",
-    "t5 = T5Model.from_pretrained('t5-small')\n",
-    "tokenizer = T5Tokenizer.from_pretrained('t5-small')"
+    "efficient_net = models.efficientnet_b6(pretrained=True, progress=True)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4881eb0e",
+   "id": "8b24c0d6",
    "metadata": {},
    "source": [
     "## 2. Data expectation"
@@ -87,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c1959c9f",
+   "id": "ae3ce217",
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e34d6fbe",
+   "id": "15bc836e",
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f988cdad",
+   "id": "b1730ca1",
    "metadata": {},
    "outputs": [
     {
@@ -517,17 +522,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b58e8e84",
+   "id": "13e42edf",
    "metadata": {},
    "source": [
     "🔑 **Note**: As we can see we don't need every column from data, so we can drop some. In fact we can only use annotations and generate url for img using id.\n",
-    "🔑 **Note**: I tried to create dataset for each image, no for each caption, but it will generate issues, because number of captions per image isn't constant. DataLoader should get equal number of targets per sample, so in this case I will use format of downloading image for each caption."
+    "🔑 **Note**: I tried to create dataset for each image, no for each caption, but it will generate issues, because number of captions per image isn't constant (for DataLoader it should be) and for Colab it will not be big deal to download image couple of times so I will create dataset for each caption."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f1d37eb1",
+   "id": "53e7b133",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,13 +540,13 @@
     "del data['licenses']\n",
     "del data['images']\n",
     "\n",
-    "data['annotations'] = pd.DataFrame(data['annotations']).drop('id', axis=1)"
+    "data = pd.DataFrame(data['annotations']).drop('id', axis=1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ecde18f9",
+   "id": "8f97d36c",
    "metadata": {},
    "outputs": [
     {
@@ -653,41 +658,202 @@
     }
    ],
    "source": [
-    "data['annotations']"
+    "data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98f3be9c",
+   "metadata": {},
+   "source": [
+    "**Comparision number of samples with limited and unlimited length and their ratio**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c617d6b6",
+   "id": "05e82492",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def id_to_url(row):\n",
-    "#     length_id = 12\n",
-    "#     id_ = str(row['image_id'])\n",
-    "#     id_str = ''.join(['0' for _ in range(length_id - len(id_))]) + id_\n",
-    "\n",
-    "#     return f'http://images.cocodataset.org/train2017/{id_str}.jpg'"
+    "lens = data.apply(lambda x: len(x['caption'].split(' ')), axis=1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b8504050",
+   "id": "69f28ba6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18.0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# data['annotations']['coco_url'] = data['annotations'].apply(lambda x: id_to_url(x['image_id']), axis=1)"
+    "np.percentile(lens, 98.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f8e4e3a1",
+   "execution_count": 12,
+   "id": "bdc4ea95",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(581751, 591753, 0.9830976775783139)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(lens[lens < 18]), len(lens), len(lens[lens < 18]) / len(lens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "88a7bc98",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "del data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "590d0854",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@dataclass\n",
+    "class cfg:\n",
+    "    max_len = 18"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "2c35436b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import itertools\n",
+    "class Vocabulary:\n",
+    "    def __init__(self):\n",
+    "        \n",
+    "        self.vocab = {\n",
+    "            '<unk>': 0,\n",
+    "            '<pad>': 1,\n",
+    "            '<sos>': 2,\n",
+    "            '<eos>': 3\n",
+    "        }\n",
+    "        \n",
+    "    def __getitem__(self, index):\n",
+    "        assert type(index) in [str, int], 'Index type must be string or int'\n",
+    "        \n",
+    "        if isinstance(index, str):\n",
+    "            try:\n",
+    "                return self.vocab[index]\n",
+    "            \n",
+    "            except KeyError:\n",
+    "                return self.vocab['<unk>']\n",
+    "        \n",
+    "        elif isinstance(index, int):\n",
+    "            try:\n",
+    "                return list(self.vocab.keys())[list(self.vocab.values()).index(index)]\n",
+    "            except (KeyError,ValueError):\n",
+    "                return self[0]\n",
+    "    \n",
+    "    def __len__(self):\n",
+    "        return len(self.vocab)\n",
+    "    \n",
+    "    def append_word(self, word):\n",
+    "        if not word in self.vocab:\n",
+    "            self.vocab[word] = len(self)\n",
+    "    \n",
+    "    def build_vocab(self, data):\n",
+    "        \"\"\"\n",
+    "            Takes array-like object.\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        data = list(itertools.chain.from_iterable(data))\n",
+    "        bag_of_words = sorted(list(set(data)))\n",
+    "        \n",
+    "        for word in bag_of_words:\n",
+    "            self.append_word(word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d86e7ee8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CocoCaptions(Dataset):\n",
+    "    def __init__(self, path):\n",
+    "        \"\"\"\n",
+    "            path: train/valid\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        with open(os.path.join('data', 'annotations', f'captions_{path}2017.json'), 'r') as f:\n",
+    "            self._data = json.loads(f.read())\n",
+    "            \n",
+    "        self._data = pd.DataFrame(self._data['annotations']).drop('id', axis=1)\n",
+    "\n",
+    "        self.preprocessing()\n",
+    "        \n",
+    "        self.vocab = Vocabulary()\n",
+    "\n",
+    "        self.vocab.build_vocab(self._data['caption'])\n",
+    "        \n",
+    "    def __len__(self):\n",
+    "        return len(self._data)\n",
+    "        \n",
+    "    def __getitem__(self, index):\n",
+    "        data = self._data.iloc[index]\n",
+    "        url = self.id_to_url(data['image_id'])\n",
+    "        \n",
+    "        img = io.imread(url)\n",
+    "        img = resize(img, (480, 640), anti_aliasing=True)\n",
+    "        \n",
+    "        return [self.vocab[i] for i in data['caption']], img\n",
+    "        \n",
+    "    def preprocessing(self):\n",
+    "                                                                    # lowercase -> remove punctuations -> split \n",
+    "        self._data['caption'] = self._data['caption'].apply(lambda x: x.lower().translate(str.maketrans('', '', string.punctuation)).split(' '))\n",
+    "        \n",
+    "    @staticmethod\n",
+    "    def id_to_url(id_):\n",
+    "        length_id = 12\n",
+    "        id_ = str(id_)\n",
+    "        id_str = ''.join(['0' for _ in range(length_id - len(id_))]) + id_\n",
+    "\n",
+    "        return f'http://images.cocodataset.org/train2017/{id_str}.jpg'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "899d8377",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = CocoCaptions('train')"
+   ]
   }
  ],
  "metadata": {
