Implement collate function for padding captions before training

--- a/captioning.ipynb
+++ b/captioning.ipynb
@@ -734,19 +734,22 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "590d0854",
+   "id": "32b5db08",
    "metadata": {},
    "outputs": [],
    "source": [
     "@dataclass\n",
     "class cfg:\n",
-    "    max_len = 18"
+    "    batch_size = 16\n",
+    "    max_len = 18\n",
+    "    width = 640\n",
+    "    height = 480"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "2c35436b",
+   "id": "2966a8a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -827,10 +830,12 @@
     "        data = self._data.iloc[index]\n",
     "        url = self.id_to_url(data['image_id'])\n",
     "        \n",
+    "#         print('downloading')\n",
     "        img = io.imread(url)\n",
-    "        img = resize(img, (480, 640), anti_aliasing=True)\n",
+    "        img = resize(img, (cfg.height, cfg.width), anti_aliasing=True)\n",
     "        \n",
-    "        return [self.vocab[i] for i in data['caption']], img\n",
+    "#         print('downloaded')\n",
+    "        return img, [self.vocab[i] for i in data['caption']]\n",
     "        \n",
     "    def preprocessing(self):\n",
     "                                                                    # lowercase -> remove punctuations -> split \n",
@@ -853,6 +858,46 @@
    "outputs": [],
    "source": [
     "data = CocoCaptions('train')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "0799c529",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pad_seq(batch):\n",
+    "    \n",
+    "    imgs = []\n",
+    "    captions = []\n",
+    "    \n",
+    "    for i, (img, caption) in enumerate(batch):\n",
+    "        text_len = len(caption)\n",
+    "        \n",
+    "        if text_len > cfg.max_len:\n",
+    "            caption = caption[:cfg.max_len]\n",
+    "        \n",
+    "        else:\n",
+    "            pad_len = cfg.max_len - text_len\n",
+    "            for j in range(pad_len):\n",
+    "\n",
+    "                caption.append(data.vocab['<pad>'])\n",
+    "                \n",
+    "        captions.append(torch.Tensor(caption).type(torch.int64))\n",
+    "        imgs.append(torch.Tensor(img))\n",
+    "    \n",
+    "    return torch.stack(imgs), torch.stack(captions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "51739970",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loader = DataLoader(data, batch_size=cfg.batch_size, collate_fn=pad_seq, shuffle=True)"
    ]
   }
  ],
