--- a/captioning.ipynb
+++ b/captioning.ipynb
@@ -16,7 +16,8 @@
     " * Andrej Karpathy's minGPT implementation https://github.com/karpathy/minGPT\n",
     " * Aladdin Persson's transformer from scratch - https://github.com/aladdinpersson/Machine-Learning-Collection/tree/master/ML/Pytorch/more_advanced/transformer_from_scratch\n",
     " * The role of the mask in transformer's decoder - https://ai.stackexchange.com/questions/23889/what-is-the-purpose-of-decoder-mask-triangular-mask-in-transformer\n",
-    " * Semi-Autoregressive Transformer for Image Captioning (Relaxed mask idea) - https://arxiv.org/pdf/2106.09436.pdf"
+    " * Semi-Autoregressive Transformer for Image Captioning (Relaxed mask idea) - https://arxiv.org/pdf/2106.09436.pdf\n",
+    " * Transformer guide (training + evaluating) https://towardsdatascience.com/how-to-code-the-transformer-in-pytorch-24db27c8f9ec"
    ]
   },
   {
@@ -517,7 +518,7 @@
    "metadata": {},
    "source": [
     "🔑 **Note**: As we can see we don't need every column from data, so we can drop some. In fact we can only use annotations and generate url for img using id.\n",
-    "🔑 **Note**: I tried to create dataset for each image, no for each caption, but it will generate issues, because number of captions per image isn't constant (for DataLoader it should be) and for Colab it will not be big deal to download image couple of times so I will create dataset for each caption."
+    "🔑 **Note**: Dataset will contain images and five captions for each, because downloading each images five times takes too much time during training."
    ]
   },
   {
@@ -732,7 +733,7 @@
     "@dataclass\n",
     "class cfg:\n",
     "    epochs = 5\n",
-    "    batch_size = 64\n",
+    "    batch_size = 12 # 5*12 captions\n",
     "    lr = 1e-5\n",
     "    max_len = 18\n",
     "    width = 489\n",
@@ -790,7 +791,9 @@
     "            Takes array-like object.\n",
     "        \"\"\"\n",
     "        \n",
-    "        data = list(itertools.chain.from_iterable(data))\n",
+    "        for _ in range(2):\n",
+    "            data = list(itertools.chain.from_iterable(data))\n",
+    "        \n",
     "        bag_of_words = sorted(list(set(data)))\n",
     "        \n",
     "        for word in bag_of_words:\n",
@@ -812,38 +815,60 @@
     "        \n",
     "        with open(os.path.join('data', 'annotations', f'captions_{path}2017.json'), 'r') as f:\n",
     "            self._data = json.loads(f.read())\n",
-    "            \n",
+    "        \n",
+    "        self.path = path\n",
+    "        \n",
     "        self._data = pd.DataFrame(self._data['annotations']).drop('id', axis=1)\n",
-    "\n",
+    "        \n",
+    "        self.split_data()\n",
+    "        \n",
     "        self.preprocessing()\n",
     "        \n",
     "        self.vocab = Vocabulary()\n",
     "\n",
-    "        self.vocab.build_vocab(self._data['caption'])\n",
+    "        self.vocab.build_vocab(self._data.values)\n",
     "        \n",
     "    def __len__(self):\n",
     "        return len(self._data)\n",
     "        \n",
     "    def __getitem__(self, index):\n",
     "        data = self._data.iloc[index]\n",
-    "        url = self.id_to_url(data['image_id'])\n",
+    "\n",
+    "        url = self.id_to_url(int(data.name))\n",
     "        \n",
     "        img = io.imread(url)\n",
     "        img = resize(img, (cfg.height, cfg.width), anti_aliasing=True)\n",
     "        \n",
-    "        return img, [self.vocab[i] for i in data['caption']]\n",
+    "        caps = []\n",
+    "        for cap in data.values:\n",
+    "            caps.append([self.vocab[word] for word in cap])\n",
+    "        \n",
+    "        return img, caps\n",
+    "        \n",
+    "    def split_data(self):\n",
+    "        ids = self._data['image_id'].value_counts() \n",
+    "        d = []\n",
+    "        \n",
+    "        for ind in list(set(list(ids[ids == 5].index))):\n",
+    "            s = self._data[self._data['image_id'] == ind]['caption'].tolist()\n",
+    "            d.append([ind, *s])\n",
+    "        \n",
+    "        df = pd.DataFrame(d, columns=['image_id', *[f'cap-{i}' for i in range(5)]]).set_index('image_id')\n",
+    "        \n",
+    "        self._data = df\n",
     "        \n",
     "    def preprocessing(self):\n",
-    "                                                                    # lowercase -> remove punctuations -> split \n",
-    "        self._data['caption'] = self._data['caption'].apply(lambda x: x.lower().translate(str.maketrans('', '', string.punctuation)).split(' '))\n",
+    "        # 5 because we have 5 captions per image \n",
+    "        for i in range(5):\n",
+    "                                                            # lowercase -> remove punctuations -> split \n",
+    "            self._data[f'cap-{i}'] = self._data[f'cap-{i}'].apply(lambda x: x.lower().translate(str.maketrans('', '', string.punctuation)).split(' '))\n",
     "        \n",
-    "    @staticmethod\n",
-    "    def id_to_url(id_):\n",
+    "    def id_to_url(self, id_):\n",
     "        length_id = 12\n",
     "        id_ = str(id_)\n",
     "        id_str = ''.join(['0' for _ in range(length_id - len(id_))]) + id_\n",
     "\n",
-    "        return f'http://images.cocodataset.org/train2017/{id_str}.jpg'"
+    "        return f'http://images.cocodataset.org/{self.path}2017/{id_str}.jpg'"
    ]
   },
   {
@@ -853,8 +878,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = CocoCaptions('train')\n",
+    "data = CocoCaptions('val')\n",
     "vocab = data.vocab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "d148ce3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Below code to adjust for new dataset"
    ]
   },
   {
@@ -1254,6 +1289,25 @@
     "\n",
     "torch.save(model.state_dict(), os.path.join('drive', 'MyDrive', 'Colab Notebooks', 'models', 'captioner-1.pt'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "8ab6f202",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Note \n",
+    "# Download image once, then pass to model each caption"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36f3be7d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
