Implement rest of code (loader, training loop) for new dataset object

--- a/captioning.ipynb
+++ b/captioning.ipynb
@@ -43,9 +43,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
     "import os\n",
+    "import json\n",
+    "import time\n",
     "import string\n",
+    "import itertools\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -752,7 +754,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import itertools\n",
     "class Vocabulary:\n",
     "    def __init__(self):\n",
     "        \n",
@@ -885,7 +886,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "d148ce3b",
+   "id": "b8a2f2c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "0799c529",
    "metadata": {},
    "outputs": [],
@@ -904,39 +905,62 @@
     "    imgs = []\n",
     "    captions = []\n",
     "    \n",
-    "    for img, caption in batch:\n",
-    "        caption = [vocab['<sos>'], *caption]\n",
-    "        text_len = len(caption)\n",
+    "    for img, caps in batch:\n",
     "        \n",
-    "        if text_len >= (cfg.max_len + 1):\n",
-    "            caption = caption[:cfg.max_len+1]\n",
-    "            caption[-1] = vocab['<eos>']    \n",
-    "         \n",
-    "        else:\n",
-    "            caption.append(vocab['<eos>'])\n",
-    "            pad_len = cfg.max_len - (text_len)\n",
-    "            for i in range(pad_len):\n",
-    "                caption.append(data.vocab['<pad>'])\n",
+    "        caps_pp = []\n",
+    "        for cap in caps:\n",
+    "            cap = [vocab['<sos>'], *cap]\n",
+    "            text_len = len(cap)\n",
+    "\n",
+    "            if text_len >= (cfg.max_len + 1):\n",
+    "                cap = cap[:cfg.max_len+1]\n",
+    "                cap[-1] = vocab['<eos>']    \n",
+    "\n",
+    "            else:\n",
+    "                cap.append(vocab['<eos>'])\n",
+    "                pad_len = cfg.max_len - (text_len)\n",
     "                \n",
-    "        captions.append(torch.Tensor(caption).type(torch.int64))\n",
+    "                for i in range(pad_len):\n",
+    "                    cap.append(data.vocab['<pad>'])\n",
+    "                    \n",
+    "            caps_pp.append(torch.IntTensor(cap))\n",
+    "            \n",
+    "        captions.append(torch.stack(caps_pp).type(torch.int64))\n",
     "        imgs.append(torch.Tensor(img))\n",
-    "    \n",
+    "\n",
     "    return torch.stack(imgs), torch.stack(captions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "51739970",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_loader = DataLoader(data, batch_size=cfg.batch_size, collate_fn=pad_seq, shuffle=True)"
+    "train_loader = DataLoader(data, batch_size=2, collate_fn=pad_seq, shuffle=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
+   "id": "4c58a9ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for i in train_loader:\n",
+    "#     plt.imshow(i[0][0])\n",
+    "#     plt.show()\n",
+    "    \n",
+    "#     print('--CAPTIONS--')\n",
+    "#     for j in i[1][0]:\n",
+    "#         print(' '.join([vocab[word.item()] for word in j]))\n",
+    "#     break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "f2f4048a",
    "metadata": {},
    "outputs": [],
@@ -964,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "683af414",
    "metadata": {},
    "outputs": [],
@@ -989,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "e7e96970",
    "metadata": {},
    "outputs": [],
@@ -1042,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "a314e5cd",
    "metadata": {},
    "outputs": [],
@@ -1074,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "57ad58cb",
    "metadata": {},
    "outputs": [],
@@ -1099,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "0690f807",
    "metadata": {},
    "outputs": [],
@@ -1159,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "48639735",
    "metadata": {},
    "outputs": [],
@@ -1201,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "1ca78f9a",
    "metadata": {},
    "outputs": [],
@@ -1211,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "68633645",
    "metadata": {},
    "outputs": [],
@@ -1230,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "97abfdc2",
    "metadata": {},
    "outputs": [],
@@ -1241,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "id": "5ae72b4c",
    "metadata": {},
    "outputs": [],
@@ -1250,20 +1274,23 @@
     "    running_loss = []\n",
     "\n",
     "    t0 = time.time()\n",
-    "    for b_idx, (img, trg) in enumerate(loader):\n",
+    "    for b_idx, (img, trgs) in enumerate(loader):\n",
     "        img = img.to(device)\n",
-    "        trg = trg.to(device)\n",
+    "        trgs = trgs.to(device)\n",
     "        \n",
-    "        scores = model(img, trg[:, :-1])\n",
-    "        \n",
-    "        optimizer.zero_grad()\n",
-    "        loss = criterion(scores.permute(0, 2, 1), trg[:, 1:])\n",
-    "        \n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "        \n",
-    "        running_loss.append(loss.item())\n",
-    "      \n",
+    "        for trg in trgs.permute(1, 0, 2):\n",
+    "            plt.imshow(img[0])\n",
+    "            \n",
+    "            scores = model(img, trg[:, :-1])\n",
+    "\n",
+    "            optimizer.zero_grad()\n",
+    "            loss = criterion(scores.permute(0, 2, 1), trg[:, 1:])\n",
+    "\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "\n",
+    "            running_loss.append(loss.item())\n",
+    "\n",
     "    loss = sum(running_loss) / len(running_loss)\n",
     "\n",
     "    print(f'Loss: {loss}, time: {time.time() - t0}s')\n",
@@ -1272,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "id": "8cda596e",
    "metadata": {},
    "outputs": [],
@@ -1282,6 +1309,7 @@
     "loss = []\n",
     "\n",
     "for epoch in range(cfg.epochs):\n",
+    "    pass\n",
     "    loss.append(train_epoch(model, optimizer, criterion, train_loader))\n",
     "    \n",
     "plt.plot(loss)\n",
@@ -1289,25 +1317,6 @@
     "\n",
     "torch.save(model.state_dict(), os.path.join('drive', 'MyDrive', 'Colab Notebooks', 'models', 'captioner-1.pt'))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "8ab6f202",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Note \n",
-    "# Download image once, then pass to model each caption"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "36f3be7d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
